Closed Bug 205247 Opened 23 years ago Closed 23 years ago

warning: `JSBool ReportOutOfMemory(class XPCCallContext &)' defined but not used_

Categories

(Core :: XPConnect, defect)

x86
BeOS
defect
Not set
trivial

Tracking

()

VERIFIED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

Attachments

(1 file)

/swap/BEOS/mozilla/js/src/xpconnect/src/xpcwrappednative.cpp:1489: warning: `JSBool ReportOutOfMemory(class XPCCallContext &)' defined but not used jband introduced the function at the very beginning of the interfaceflattening work. He removed the last consumer in 1.59 jband%netscape.com Since it's unused (everyone uses JS_ReportOutOfMemory which is all it calls) I'm going to post a patch to remove it instead of a patch to make things use it.
Attachment #122960 - Flags: superreview?(dmose)
Attachment #122960 - Flags: review?(dbradley)
Attachment #122960 - Flags: superreview?(dmose) → superreview+
Comment on attachment 122960 [details] [diff] [review] remove unused function r=dbradley
Attachment #122960 - Flags: review?(dbradley) → review+
checked in
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Checkin verified -
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: