Bug 205247 warning: `JSBool ReportOutOfMemory(class XPCCallContext &)' defined but not used r=dbradley sr=dmose